objects/ProductItem.object
<CustomObject>
    <fields>
        <fullName>barcode__c</fullName>
        <label>Barcode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>batch_no__c</fullName>
        <description>Unique alphanumeric identifier of a lot of products</description>
        <label>Batch No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cm_active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox on Device record, if CM was activated.</description>
        <label>CM active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>date_of_manufacture__c</fullName>
        <label>Date of Manufacture</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>enhanced_label__c</fullName>
        <description>changed per</description>
        <formula>Product2.Name  &amp; &apos;, &apos; &amp; SerialNumber &amp; &apos;, &apos; &amp; &apos;UBD: &apos; &amp; TEXT(expiration_date_ubd__c) &amp; &apos;, &apos; &amp; location_label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enhanced Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>expiration_date_ubd__c</fullName>
        <description>Date after which product expires and must not be used</description>
        <label>Expiration date (UBD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>last_movement_date__c</fullName>
        <label>Last Movement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>location_label__c</fullName>
        <formula>Location.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>manufacturer__c</fullName>
        <label>Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BIOTRONIK</fullName>
                    <default>true</default>
                    <label>BIOTRONIK</label>
                </value>
                <value>
                    <fullName>5500_APC</fullName>
                    <label>AMERICAN PACEMAKER CORP.</label>
                </value>
                <value>
                    <fullName>5500_ACO</fullName>
                    <label>ANGEION CORP.</label>
                </value>
                <value>
                    <fullName>5500_BME</fullName>
                    <label>BIOMEC</label>
                </value>
                <value>
                    <fullName>5500_BSX</fullName>
                    <label>BOSTON SCIENTIFIC</label>
                </value>
                <value>
                    <fullName>5500_CAC</fullName>
                    <label>CARDIAC CONTROL</label>
                </value>
                <value>
                    <fullName>5500_CAI</fullName>
                    <label>CARDIAC IMPULSE</label>
                </value>
                <value>
                    <fullName>5500_CAP</fullName>
                    <label>CARDIAC PACEMAKER</label>
                </value>
                <value>
                    <fullName>5500_CPR</fullName>
                    <label>CARDIAC PRODUCTS</label>
                </value>
                <value>
                    <fullName>5500_CPM</fullName>
                    <label>CARDIO-PACE MEDICAL</label>
                </value>
                <value>
                    <fullName>5500_CHR</fullName>
                    <label>CHRONIC</label>
                </value>
                <value>
                    <fullName>5500_COK</fullName>
                    <label>COOK</label>
                </value>
                <value>
                    <fullName>5500_COI</fullName>
                    <label>CORATOMIC INC.</label>
                </value>
                <value>
                    <fullName>5500_COR</fullName>
                    <label>CORDIS</label>
                </value>
                <value>
                    <fullName>5500_DAI</fullName>
                    <label>DAIG CORP.</label>
                </value>
                <value>
                    <fullName>5500_ES</fullName>
                    <label>EA</label>
                </value>
                <value>
                    <fullName>5500_ELM</fullName>
                    <label>ELA MEDICAL</label>
                </value>
                <value>
                    <fullName>5500_ELS</fullName>
                    <label>ELS</label>
                </value>
                <value>
                    <fullName>5500_ENP</fullName>
                    <label>ENPATH MEDICAL INC.</label>
                </value>
                <value>
                    <fullName>5500_GRE</fullName>
                    <label>GREATBATCH</label>
                </value>
                <value>
                    <fullName>5500_GDT</fullName>
                    <label>GUIDANT</label>
                </value>
                <value>
                    <fullName>5500_IMP</fullName>
                    <label>IMPLANTRONIK</label>
                </value>
                <value>
                    <fullName>5500_INA</fullName>
                    <label>INHO A</label>
                </value>
                <value>
                    <fullName>5500_INH</fullName>
                    <label>INHOUEE</label>
                </value>
                <value>
                    <fullName>5500_INN</fullName>
                    <label>INHOUSEN</label>
                </value>
                <value>
                    <fullName>5500_INO</fullName>
                    <label>INNOMEDICA LTD.</label>
                </value>
                <value>
                    <fullName>5500_INT</fullName>
                    <label>INTERMEDICS INC.</label>
                </value>
                <value>
                    <fullName>5500_MDO</fullName>
                    <label>MEDICO</label>
                </value>
                <value>
                    <fullName>5500_MDT</fullName>
                    <label>MEDTRONIC, INC</label>
                </value>
                <value>
                    <fullName>5500_MYO</fullName>
                    <label>MYOPORE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>model_no__c</fullName>
        <formula>Product2.sap_model_no__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pid__c</fullName>
        <description>Product identifier assigned by BIOTRONIK for use with Home Monitoring Service Center registrations</description>
        <label>PID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_code__c</fullName>
        <description>Unique numeric identifier of the product</description>
        <formula>Product2.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>product_type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>quantity_unit_of_measure__c</fullName>
        <label>Quantity Unit Of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Quantity_unit_of_measure</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>sap_company_code__c</fullName>
        <description>All org units in SAP are uniquely identified with a company name and a company code with 4 digits, see API-Names.</description>
        <label>Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>sap_price__c</fullName>
        <description>Loaded price at time of Order</description>
        <label>SAP Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sap_stock_location__c</fullName>
        <externalId>true</externalId>
        <label>SAP Stock Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serialized_item__c</fullName>
        <formula>Product2.serialized_item__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serialized Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>stocktype__c</fullName>
        <label>Stock Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B</fullName>
                    <label>Bulk</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>Consignment Stock</label>
                </value>
                <value>
                    <fullName>L</fullName>
                    <label>Loaned Stock</label>
                </value>
                <value>
                    <fullName>T</fullName>
                    <label>Trunk Stock</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ubd_expired__c</fullName>
        <formula>(expiration_date_ubd__c &lt; TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UBD Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>udi__c</fullName>
        <description>Unique Device Identification made up of serial/batch number, UBD, and EAN. Required by FDA</description>
        <label>UDI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_ProductItems</fullName>
        <filterScope>Everything</filterScope>
        <label>All Product Items</label>
    </listViews>
    <listViews>
        <fullName>My_ProductItems</fullName>
        <filterScope>Mine</filterScope>
        <label>My Product Items</label>
    </listViews>
    <listViews>
        <fullName>My_ProductItems</fullName>
        <filterScope>Mine</filterScope>
        <label>My Product Items</label>
    </listViews>
    <recordTypes>
        <fullName>biotronik_product</fullName>
        <active>true</active>
        <label>BIOTRONIK Product</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>